<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".HomeActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="5">

            <EditText
                android:id="@+id/activity_home_vehicle_number_ed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:drawableStart="@drawable/vnumber"
                android:drawablePadding="10dp"
                android:hint="@string/vehiclenumber" />

            <ImageButton
                android:id="@+id/activity_home_img_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:padding="10dp"
                android:src="@drawable/icon_search" />

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/activity_home_towing_result"
            style="@style/CardView.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:visibility="invisible"
            app:cardElevation="10dp"
            tools:ignore="ContentDescription">


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/activity_home_vehicle_img"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="center" />

                <TextView
                    android:id="@+id/activity_home_vehicle_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/vnumber"
                    android:drawablePadding="10dp"
                    android:padding="10dp"
                    android:text="@string/number"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/activity_home_vehicle_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/icon_date"
                    android:drawablePadding="10dp"
                    android:padding="10dp"
                    android:text="@string/date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/activity_home_vehicle_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/icon_time"
                    android:drawablePadding="10dp"
                    android:padding="10dp"
                    android:text="@string/time"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/activity_home_vehicle_towing_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/icon_map"
                    android:drawablePadding="10dp"
                    android:padding="10dp"
                    android:text="@string/towing_area"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/activity_home_vehicle__unique_challan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/icon_challan"
                    android:drawablePadding="10dp"
                    android:padding="10dp"
                    android:text="@string/unique_challan"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/activity_home_vehicle__fine_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/icon_fine_amount"
                    android:drawablePadding="10dp"
                    android:padding="10dp"
                    android:text="@string/fine_amount"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/activity_home_vehicle_verify_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/icon_status"
                    android:drawablePadding="10dp"
                    android:padding="10dp"
                    android:text="@string/status"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorPrimaryDark" />


                <TextView
                    android:id="@+id/activity_home_vehicle_zonal_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/icon_zonal"
                    android:drawablePadding="10dp"
                    android:padding="10dp"
                    android:text="@string/zonaladdress"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorPrimaryDark" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>
